syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Events {
    repeated fac_AdminChanged fac_admin_changeds = 1;
    repeated fac_BeaconUpgraded fac_beacon_upgradeds = 2;
    repeated fac_DeployedLenderGroupContract fac_deployed_lender_group_contracts = 3;
    repeated fac_Upgraded fac_upgradeds = 4;
    repeated groupp_BorrowerAcceptedFunds groupp_borrower_accepted_funds = 5;
    repeated groupp_DefaultedLoanLiquidated groupp_defaulted_loan_liquidateds = 6;
    repeated groupp_EarningsWithdrawn groupp_earnings_withdrawns = 7;
    repeated groupp_Initialized groupp_initializeds = 8;
    repeated groupp_LenderAddedPrincipal groupp_lender_added_principals = 9;
    repeated groupp_LoanRepaid groupp_loan_repaids = 10;
    repeated groupp_OwnershipTransferred groupp_ownership_transferreds = 11;
    repeated groupp_Paused groupp_pauseds = 12;
    repeated groupp_PoolInitialized groupp_pool_initializeds = 13;
    repeated groupp_Unpaused groupp_unpauseds = 14;
}

message fac_AdminChanged {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes previous_admin = 5;
    bytes new_admin = 6;
}

message fac_BeaconUpgraded {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes beacon = 5;
}

message fac_DeployedLenderGroupContract {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes group_contract = 5;
}

message fac_Upgraded {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes implementation = 5;
}

message groupp_BorrowerAcceptedFunds {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes borrower = 6;
    string bid_id = 7;
    string principal_amount = 8;
    string collateral_amount = 9;
    uint64 loan_duration = 10;
    uint64 interest_rate = 11;
}

message groupp_DefaultedLoanLiquidated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    string bid_id = 6;
    bytes liquidator = 7;
    string amount_due = 8;
    string token_amount_difference = 9;
}

message groupp_EarningsWithdrawn {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes lender = 6;
    string amount_pool_shares_tokens = 7;
    string principal_tokens_withdrawn = 8;
    bytes recipient = 9;
}

message groupp_Initialized {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    uint64 version = 6;
}

message groupp_LenderAddedPrincipal {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes lender = 6;
    string amount = 7;
    string shares_amount = 8;
    bytes shares_recipient = 9;
}

message groupp_LoanRepaid {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    string bid_id = 6;
    bytes repayer = 7;
    string principal_amount = 8;
    string interest_amount = 9;
    string total_principal_repaid = 10;
    string total_interest_collected = 11;
}

message groupp_OwnershipTransferred {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes previous_owner = 6;
    bytes new_owner = 7;
}

message groupp_Paused {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes account = 6;
}

message groupp_PoolInitialized {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes principal_token_address = 6;
    bytes collateral_token_address = 7;
    string market_id = 8;
    uint64 max_loan_duration = 9;
    uint64 interest_rate_lower_bound = 10;
    uint64 interest_rate_upper_bound = 11;
    uint64 liquidity_threshold_percent = 12;
    uint64 loan_to_value_percent = 13;
    uint64 uniswap_pool_fee = 14;
    uint64 twap_interval = 15;
    bytes pool_shares_token = 16;
}

message groupp_Unpaused {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes account = 6;
}



